--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t yasir326/react-test -f ./client/Dockerfile.dev ./client
 
 script: 
-  - docker run -e CI=true yasir326/react-test npm run test -- --coverage
+  - docker run yasir326/react-test npm run test -- --coverage
 
 after_success:
   - docker build -t yasir326/multi-client -f ./client
