--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ before_install:
   - docker build -t yasir326/react-test -f ./client/Dockerfile.dev ./client
 
 script: 
-  - docker run yasir326/react-test npm run test -- --coverage
+  - docker run -e CI=true yasir326/react-test npm run test -- --coverage
 
 after_success:
-  - docker build -t yasir326/multi-client -f ./client
-  - docker build -t yasir326/multi-nginx -f ./nginx
-  - docker build -t yasir326/multi-server -f ./server
-  - docker build -t yasir326/multi-worker -f ./worker
+  - docker build -t yasir326/multi-client ./client
+  - docker build -t yasir326/multi-nginx ./nginx
+  - docker build -t yasir326/multi-server ./server
+  - docker build -t yasir326/multi-worker ./worker
   #Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   
