--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,17 @@ after_success:
   - docker push yasir326/multi-nginx
   - docker push yasir326/multi-server
   - docker push yasir326/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-2"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-2-262517256597"
+  bucket_path: "multi-docker"
+  on:
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY" 
+
