--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   app: "multi-docker"
   env: "MultiDocker-env"
   bucket_name: "elasticbeanstalk-eu-west-2-262517256597"
-  bucket_path: "multi-docker"
+  bucket_path: "docker-multi"
   on:
     branch: master
   access_key_id: "$AWS_ACCESS_KEY"
