--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen: 3000;
 
     location / {
-        root / user/share/nginx/html; //<= This is where we put all our production assets
+        root /usr/share/nginx/html; //<= This is where we put all our production assets
         index index.html index.htm; //
         try_files $uri $uri/ /index.html;
     }
