--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen: 3000;
+    listen 3000;
 
     location / {
         root /usr/share/nginx/html; //<= This is where we put all our production assets
