--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -2,8 +2,8 @@ server {
     listen 3000;
 
     location / {
-        root /usr/share/nginx/html; //<= This is where we put all our production assets
-        index index.html index.htm; //
+        root /usr/share/nginx/html;ß
+        index index.html index.htm; 
         try_files $uri $uri/ /index.html;
     }
 }
